@@ -82,6 +82,11 @@ password expiry interval, in which case a new expiry date will be
 calculated.</td>
 </tr>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(3131945);return false;">3131945</a><br></td>
+<td>Double-clicking on the system tray icon when PasswordSafe is not
+  minimized now brings it to front, instead of minimizing.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="FR(3131935);return false;">3131935</a><br></td>
 <td>Rename of an entry or group in the Tree View can now only be
 performed via the Rename shortcut (default value F2), using the Edit
